# Create the 2023 library
add_library(2023 INTERFACE)

add_subdirectory(day_01)
add_subdirectory(day_02)
add_subdirectory(day_03)
add_subdirectory(day_04)
add_subdirectory(day_05)
add_subdirectory(day_06)
add_subdirectory(day_07)
add_subdirectory(day_08)
add_subdirectory(day_09)
add_subdirectory(day_10)
add_subdirectory(day_11)
add_subdirectory(day_12)

target_link_libraries(2023 INTERFACE trebuchet)
target_link_libraries(2023 INTERFACE cube_conundrum)
target_link_libraries(2023 INTERFACE gear_ratios)
target_link_libraries(2023 INTERFACE scratchcards)
target_link_libraries(2023 INTERFACE fertilizer)
target_link_libraries(2023 INTERFACE wait_for_it)
target_link_libraries(2023 INTERFACE camel_cards)
target_link_libraries(2023 INTERFACE haunted_wasteland)
target_link_libraries(2023 INTERFACE mirage_maintenance)
target_link_libraries(2023 INTERFACE pipe_maze)
target_link_libraries(2023 INTERFACE cosmic_expansion)
target_link_libraries(2023 INTERFACE hot_springs)